<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    >
    
   <RelativeLayout 
        android:id="@+id/relativeLayout_others"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_alignParentBottom="true">
        <ImageView 
            android:id="@+id/image_others"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_7"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_others"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_others"/>
        <Button 
            android:id="@+id/category_others"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_mix"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:layout_above="@id/relativeLayout_others"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        >
        <ImageView 
            android:id="@+id/image_mix"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_6"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_mix"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_mix"/>
        <Button 
            android:id="@+id/category_mix"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_culture"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/relativeLayout_mix"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        android:background="#ffffff">
        <ImageView 
            android:id="@+id/image_culture"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_5"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_culture"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_culture"/>
        <Button 
            android:id="@+id/category_culture"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_science"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/relativeLayout_culture"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        android:background="#ffffff">
        <ImageView 
            android:id="@+id/image_science"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_4"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_science"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_science"/>
        <Button 
            android:id="@+id/category_science"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_outdoor"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/relativeLayout_science"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        android:background="#ffffff">
        <ImageView 
            android:id="@+id/image_outdoor"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_3"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_outdoor"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_outdoor"/>
        <Button 
            android:id="@+id/category_outdoor"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_sport"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/relativeLayout_outdoor"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        android:background="#ffffff">
        <ImageView 
            android:id="@+id/image_sport"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_2"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_sport"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_sport"/>
        <Button 
            android:id="@+id/category_sport"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <RelativeLayout 
        android:id="@+id/relativeLayout_art"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_above="@+id/relativeLayout_sport"
        android:layout_marginBottom="@dimen/shetuandingyue_button_margin"
        android:background="#ffffff">
        <ImageView 
            android:id="@+id/image_art"
            android:layout_height="@dimen/shetuandingyue_image"
            android:layout_width="@dimen/shetuandingyue_image"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/shetuandingyue_image_padding_h"
            android:layout_marginRight="@dimen/shetuandingyue_image_padding_h"
            android:scaleType="centerInside"
            android:src="@drawable/shape_shetuandingyue_1"/>
        <TextView 
           	android:layout_height="wrap_content"
           	android:layout_width="wrap_content"
           	android:layout_toRightOf="@+id/image_art"
           	android:layout_centerVertical="true"
           	android:textSize="@dimen/text_shetuandingyue_name"
           	android:text="@string/shetuandingyue_main_art"/>
        <Button 
            android:id="@+id/category_art"
            android:layout_height="@dimen/shetuandingyue_button_height"
            android:layout_width="match_parent"
            android:background="@drawable/selector_cover_transparent"/>
    </RelativeLayout>
    
    <TextView
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relativeLayout_art"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="17sp"
        android:textColor="@color/text_black_dark"
        android:text="@string/shetuandingyue_help_1"
        android:background="@null" />
    
</RelativeLayout>
