<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <RelativeLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="0.9">
        
        <ImageView 
            android:id="@+id/image_top_background"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:src="@drawable/menu_main_background"
            android:scaleType="centerCrop"/>
        
        <com.shoulder.xiaonei.myClass_myView.CircularImage 
            android:id="@+id/myAvatar"
            android:layout_height="@dimen/menu_main_2_myAvatar_size"
            android:layout_width="@dimen/menu_main_2_myAvatar_size"
            android:layout_marginTop="@dimen/menu_main_2_myAvatar_padding_top"
            android:layout_marginLeft="@dimen/menu_main_2_myAvatar_padding_left"/>
        
        <TextView 
            android:id="@+id/myName"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/menu_main_2_myAvatar_padding_left"
            android:layout_above="@+id/myIntroduce"
            android:paddingBottom="@dimen/menu_main_2_padding_topTextNameAndTopTextIntroduce"
            android:textColor="#ffffff"
            android:textSize="@dimen/menu_main_2_myName_textSize"/>
        
        <TextView 
            android:id="@+id/myIntroduce"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/menu_main_2_myAvatar_padding_left"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/menu_main_2_topText_paddingBottom"
            android:textColor="#ffffff"
            android:textSize="@dimen/menu_main_2_myIntroduce_textSize"/>
        
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingTop="@dimen/menu_main_2_padding_topBackgroundAndTextButton"
        android:paddingBottom="@dimen/menu_main_2_padding_allAndBottom">
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_myzone"/>
            
            <TextView 
                android:id="@+id/text_myZone"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_myZone_logout"/>
            
            <Button 
                android:id="@+id/myZone"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_subscribe"/>
            
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_subscribe"/>
            
            <Button 
                android:id="@+id/shetuan"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_tucaoqiang"/>
            
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_tucaoqiang"/>
            
            <Button 
                android:id="@+id/tucaoqiang"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_contacts"/>
            
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_contacts"/>
            
            <Button 
                android:id="@+id/contacts"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        <ImageView 
            android:layout_height="1dp"
            android:layout_width="match_parent"
            android:background="@color/line"/>
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_changeschool"/>
            
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_changeSchool"/>
            
            <Button 
                android:id="@+id/change_school"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        <RelativeLayout 
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_height="@dimen/menu_main_2_buttonIcon_size"
                android:layout_width="@dimen/menu_main_2_buttonIcon_size"
                android:layout_marginLeft="@dimen/menu_main_2_buttonIcon_padding_left"
                android:layout_centerVertical="true"
                android:src="@drawable/menu_setup"/>
            
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="@dimen/menu_main_2_buttonText_padding_left"
                android:layout_centerVertical="true"
                android:textColor="@color/text_black_tab"
                android:textSize="@dimen/menu_main_2_buttonText_textSize"
                android:text="@string/menu_main_buttonText_setUp"/>
            
            <Button 
                android:id="@+id/set_up"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/selector_cover_transparent"/>
        </RelativeLayout>
        
        
        
    </LinearLayout>
</LinearLayout>
